remove href from buttons

--- a/templates/docs/examples/templates/typographic-spacing.html
+++ b/templates/docs/examples/templates/typographic-spacing.html
@@ -1300,8 +1300,8 @@
       <h6>Heading six</h6>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <button href="#">Long button name</button>
-      <button href="#">Confirm</button>
+      <button>Long button name</button>
+      <button>Confirm</button>
     </div>
   </div>
 </div> -->
