--- a/templates/docs/examples/patterns/contextual-menu/with-indicator.html
+++ b/templates/docs/examples/patterns/contextual-menu/with-indicator.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <span class="p-contextual-menu--left">
-  <button href="#" class="p-button--positive p-contextual-menu__toggle has-icon" aria-controls="menu-3" aria-expanded="false" aria-haspopup="true"><i class="p-icon--contextual-menu is-light p-contextual-menu__indicator"></i><span>Take action</span></button>
+  <button class="p-button--positive p-contextual-menu__toggle has-icon" aria-controls="menu-3" aria-expanded="false" aria-haspopup="true"><i class="p-icon--contextual-menu is-light p-contextual-menu__indicator"></i><span>Take action</span></button>
   <span class="p-contextual-menu__dropdown" id="menu-3" aria-hidden="true" aria-label="submenu">
     <span class="p-contextual-menu__group">
       <a href="#" class="p-contextual-menu__link">Commission</a>
