--- a/templates/docs/examples/patterns/breadcrumbs-deprecated.html
+++ b/templates/docs/examples/patterns/breadcrumbs-deprecated.html
@@ -5,11 +5,11 @@
 
 {% block content %}
 <ul class="p-breadcrumbs">
-  <li class="p-breadcrumbs__item">Overview</li>
+  <li class="p-breadcrumbs__item"><a href="#">Overview</a></li>
   <li class="p-breadcrumbs__item"><a href="#">Features</a></li>
   <li class="p-breadcrumbs__item"><a href="#">Managed</a></li>
   <li class="p-breadcrumbs__item"><a href="#">Install</a></li>
   <li class="p-breadcrumbs__item"><a href="#">Partners</a></li>
-  <li class="p-breadcrumbs__item"><a href="#">Docs</a></li>
+  <li class="p-breadcrumbs__item">Docs</li>
 </ul>
 {% endblock %}
