update alt texts

--- a/templates/docs/examples/patterns/media-object/media-object-circ-img.html
+++ b/templates/docs/examples/patterns/media-object/media-object-circ-img.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="p-media-object">
-  <img src="https://assets.ubuntu.com/v1/0a529437-karlos.jpeg" class="p-media-object__image is-round">
+  <img src="https://assets.ubuntu.com/v1/0a529437-karlos.jpeg" class="p-media-object__image is-round"  alt="">
   <div class="p-media-object__details">
     <h3 class="p-media-object__title">
       <a href="#">Karl Waghorn-Moyce</a>
