--- a/templates/docs/examples/patterns/media-object/media-object.html
+++ b/templates/docs/examples/patterns/media-object/media-object.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="p-media-object">
-  <img src="https://assets.ubuntu.com/v1/60d9b81e-picto-canonical.svg" class="p-media-object__image">
+  <img src="https://assets.ubuntu.com/v1/60d9b81e-picto-canonical.svg" class="p-media-object__image" alt="">
   <div class="p-media-object__details">
     <h3 class="p-media-object__title">
       <a href="#">NVIDIA GTC 2019</a>
