--- a/templates/docs/examples/templates/vertical-spacing.html
+++ b/templates/docs/examples/templates/vertical-spacing.html
@@ -38,7 +38,7 @@
         magna aliqua. Ut enim ad minim veniam</p>
     </div>
     <div class="col-6">
-      <img src="https://assets.ubuntu.com/v1/63c08d11-suru-background.png" alt="" />
+      <img src="https://assets.ubuntu.com/v1/63c08d11-suru-background.png" alt=""/>
     </div>
   </div>
 </section>
@@ -100,7 +100,7 @@
   </div>
   <div class="row p-divider">
     <div class="col-6 p-divider__block">
-      <img src="https://assets.ubuntu.com/v1/df1e6f24-Operate-your-machines-remotely.png?h=295">
+      <img src="https://assets.ubuntu.com/v1/df1e6f24-Operate-your-machines-remotely.png?h=295" alt="">
       <h3>Operate your machines remotely</h3>
       <p>Manage individual or groups of servers.</p>
       <ul>
@@ -118,7 +118,7 @@
       </p>
     </div>
     <div class="col-6 p-divider__block">
-      <img src="https://assets.ubuntu.com/v1/6ecf284f-Provision-with-any-OS-image.png?h=293">
+      <img src="https://assets.ubuntu.com/v1/6ecf284f-Provision-with-any-OS-image.png?h=293" alt="">
       <h3>Provision with any <abbr title="Operating system">OS</abbr> image</h3>
       <p>Select the <abbr title="Operating system">OS</abbr> you require in your data centre <span
           aria-describedby="image-info">*</span></p>
