remove unnecessary alt content

--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -108,7 +108,7 @@
     <div class="col-6">
       <div class="p-heading-icon">
         <div class="p-heading-icon__header is-stacked">
-          <img class="p-heading-icon__img" src="https://assets.ubuntu.com/v1/60d9b81e-picto-canonical.svg" alt="Canonical pictogram"/>
+          <img class="p-heading-icon__img" src="https://assets.ubuntu.com/v1/60d9b81e-picto-canonical.svg" alt=""/>
           <h3 class="p-heading-icon__title">Licences</h3>
         </div>
       </div>
