--- a/templates/docs/examples/patterns/strips/accent.html
+++ b/templates/docs/examples/patterns/strips/accent.html
@@ -11,7 +11,7 @@
       <p>Learn how to maintain ongoing security compliance for your Ubuntu 14.04 LTS systems.</p>
     </div>
     <div class="col-4">
-      <img src="https://assets.ubuntu.com/v1/2217d1c8-Security.svg" alt="Placeholder image" />
+      <img src="https://assets.ubuntu.com/v1/2217d1c8-Security.svg" alt="" />
     </div>
   </div>
 </section>
