--- a/templates/docs/examples/patterns/strips/deep.html
+++ b/templates/docs/examples/patterns/strips/deep.html
@@ -11,7 +11,7 @@
       <p>Learn about how Ubuntu Core and snaps can help you build your connected devices.</p>
     </div>
     <div class="col-4 u-hide--small u-align--center">
-      <img src="https://assets.ubuntu.com/v1/808a4e5b-iot.png?h=300" alt="Placeholder image" />
+      <img src="https://assets.ubuntu.com/v1/808a4e5b-iot.png?h=300" alt="" />
     </div>
   </div>
 </section>
