--- a/templates/docs/examples/patterns/strips/image.html
+++ b/templates/docs/examples/patterns/strips/image.html
@@ -12,7 +12,7 @@
         it.</p>
     </div>
     <div class="col-4 u-hide--small u-align--center">
-      <img src="https://assets.ubuntu.com/v1/1abb8716-conjure-up-illustration.svg" alt="Placeholder image" />
+      <img src="https://assets.ubuntu.com/v1/1abb8716-conjure-up-illustration.svg" alt="" />
     </div>
   </div>
 </section>
@@ -25,7 +25,7 @@
         <p>It is our mission to make open source software available to people everywhere. We believe the best way to fuel innovation is to give the innovators the technology they need.</p>
       </div>
       <div class="col-4 u-hide--small u-align--center">
-        <img src="https://assets.ubuntu.com/v1/9c74eb2d-logo-canonical-white.svg" alt="Placeholder image" />
+        <img src="https://assets.ubuntu.com/v1/9c74eb2d-logo-canonical-white.svg" alt="" />
       </div>
     </div>
   </div>
