--- a/templates/docs/examples/templates/typographic-spacing.html
+++ b/templates/docs/examples/templates/typographic-spacing.html
@@ -1376,7 +1376,7 @@
           consulting&nbsp;›</a></p>
     </div>
     <div class="col-3 u-vertically-center u-align--center u-hide--small">
-      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
+      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="">
     </div>
   </div>
 </section>
@@ -1394,7 +1394,7 @@
       <button>Contact us</button>
     </div>
     <div class="col-3 u-vertically-center u-align--center u-hide--small">
-      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
+      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="">
     </div>
   </div>
 </section>
@@ -1412,7 +1412,7 @@
       <button>Contact us</button>
     </div>
     <div class="col-3 u-vertically-center u-align--center u-hide--small">
-      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
+      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="">
     </div>
   </div>
 </section>
@@ -1430,7 +1430,7 @@
       <button>Contact us</button>
     </div>
     <div class="col-3 u-vertically-center u-align--center u-hide--small">
-      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
+      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="">
     </div>
   </div>
 </section>
@@ -1448,7 +1448,7 @@
       <button>Contact us</button>
     </div>
     <div class="col-3 u-vertically-center u-align--center u-hide--small">
-      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="Kubeflow">
+      <img src="https://assets.ubuntu.com/v1/7d33e0a1-AI+illustration+hero.svg" alt="">
     </div>
   </div>
 </section>
@@ -1629,9 +1629,11 @@
 <hr>
 <div class="row">
   <a target="_blank" rel="noopener noreferrer"
-    href="https://assets.ubuntu.com/v1/06153e05-screenshot-tv-homepage-wide-image-900x334.jpg"><img
+    href="https://assets.ubuntu.com/v1/06153e05-screenshot-tv-homepage-wide-image-900x334.jpg">
+    <img
       src="https://assets.ubuntu.com/v1/06153e05-screenshot-tv-homepage-wide-image-900x334.jpg"
-      alt="image" style="max-width:100%;"></a>
+      alt="" style="max-width:100%;"/>
+  </a>
   <h3>This is a heading following an image</h3>
 </div>
 <div class="row">
