--- a/templates/docs/examples/utilities/image-position/bottom.html
+++ b/templates/docs/examples/utilities/image-position/bottom.html
@@ -9,7 +9,7 @@
       <p>Download the latest version of Ubuntu, for desktop PCs and laptops.</p>
     </div>
     <div class="col-6">
-      <img src="https://assets.ubuntu.com/v1/c6504e94-Dell_XPS_Laptop_Front-Desktop.png?h=200" alt="Placeholder image" class="u-image-position--bottom" />
+      <img src="https://assets.ubuntu.com/v1/c6504e94-Dell_XPS_Laptop_Front-Desktop.png?h=200" alt="" class="u-image-position--bottom" />
     </div>
   </div>
 </section>
