--- a/templates/docs/examples/patterns/heading-icon/heading-icon-small.html
+++ b/templates/docs/examples/patterns/heading-icon/heading-icon-small.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="p-heading-icon--small">
   <div class="p-heading-icon__header">
-    <img class="p-heading-icon__img" src="https://assets.ubuntu.com/v1/425efe3a-lxd.svg" alt="LXD icon"/>
+    <img class="p-heading-icon__img" src="https://assets.ubuntu.com/v1/425efe3a-lxd.svg" alt=""/>
     <h4 class="p-heading-icon__title">LXD — system containers</h4>
   </div>
   <p>LXD, the Linux container hypervisor, merges the speed and density of containers with the manageability and security of traditional virtual machines. Economics are directly tied to density, and no other virtualisation technology is as fast or dense as LXD.</p>
