--- a/templates/docs/examples/patterns/inline-images.html
+++ b/templates/docs/examples/patterns/inline-images.html
@@ -6,19 +6,19 @@
 {% block content %}
 <ul class="p-inline-images">
   <li class="p-inline-images__item">
-    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/73135672-ntt-logo.svg" alt="Placeholder image" />
+    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/73135672-ntt-logo.svg" alt="" />
   </li>
   <li class="p-inline-images__item">
-    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/ee5d503f-rabobank-4.svg" alt="Placeholder image" />
+    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/ee5d503f-rabobank-4.svg" alt="" />
   </li>
   <li class="p-inline-images__item">
-    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/f9832168-AstraZeneca.png?w=144" alt="Placeholder image" />
+    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/f9832168-AstraZeneca.png?w=144" alt="" />
   </li>
   <li class="p-inline-images__item">
-    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/d424d305-Tesco_Logo.svg" alt="Placeholder image" />
+    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/d424d305-Tesco_Logo.svg" alt="" />
   </li>
   <li class="p-inline-images__item">
-    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/c26cade5-1024px-BNP_Paribas.svg1_.png?w=144" alt="Placeholder image" />
+    <img class="p-inline-images__logo" src="https://assets.ubuntu.com/v1/c26cade5-1024px-BNP_Paribas.svg1_.png?w=144" alt="" />
   </li>
 </ul>
 {% endblock %}
