--- a/templates/docs/examples/patterns/matrix.html
+++ b/templates/docs/examples/patterns/matrix.html
@@ -6,7 +6,7 @@
 {% block content %}
 <ul class="p-matrix">
   <li class="p-matrix__item">
-    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/60d9b81e-picto-canonical.svg" alt="icon">
+    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/60d9b81e-picto-canonical.svg" alt="">
     <div class="p-matrix__content">
       <h3 class="p-matrix__title"><a class="p-matrix__link" href="#">Canonical</a></h3>
       <div class="p-matrix__desc">
@@ -15,7 +15,7 @@
     </div>
   </li>
   <li class="p-matrix__item">
-    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/c4f35e06-products-hero-ubuntu.svg" alt="icon">
+    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/c4f35e06-products-hero-ubuntu.svg" alt="">
     <div class="p-matrix__content">
       <h3 class="p-matrix__title"><a class="p-matrix__link" href="#">Ubuntu</a></h3>
       <div class="p-matrix__desc">
@@ -24,14 +24,14 @@
     </div>
   </li>
   <li class="p-matrix__item">
-    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/0de4fcd5-logo-maas-icon.svg" alt="icon">
+    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/0de4fcd5-logo-maas-icon.svg" alt="">
     <div class="p-matrix__content">
       <h3 class="p-matrix__title"><a class="p-matrix__link" href="#">MAAS</a></h3>
       <p class="p-matrix__desc">Create a bare-metal cloud with Metal as a Service for IPAM and provisioning</p>
     </div>
   </li>
   <li class="p-matrix__item">
-    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/3dee82a5-landscape-logo_smaller.svg" alt="icon">
+    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/3dee82a5-landscape-logo_smaller.svg" alt="">
     <div class="p-matrix__content">
       <h3 class="p-matrix__title"><a class="p-matrix__link" href="#">Landscape</a></h3>
       <div class="p-matrix__desc">
@@ -40,21 +40,21 @@
     </div>
   </li>
   <li class="p-matrix__item">
-    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/6d382a53-image-juju-256.svg" alt="icon">
+    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/6d382a53-image-juju-256.svg" alt="">
     <div class="p-matrix__content">
       <h3 class="p-matrix__title"><a class="p-matrix__link" href="#">Juju</a></h3>
       <p class="p-matrix__desc">Model-driven multi-cloud operations for applications. On-premise or on-cloud SAAS app store, with big data, k8s and openstack solutions</p>
     </div>
   </li>
   <li class="p-matrix__item">
-    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/fffc8205-lxd-logo_smaller.svg" alt="icon">
+    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/fffc8205-lxd-logo_smaller.svg" alt="">
     <div class="p-matrix__content">
       <h3 class="p-matrix__title"><a class="p-matrix__link" href="#">LXD</a></h3>
       <p class="p-matrix__desc">A pure-container hypervisor. Replace legacy app VMs with containers for speed and density</p>
     </div>
   </li>
   <li class="p-matrix__item">
-    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/19c7461a-snapcraft-primary-icon--dark.svg" alt="icon">
+    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/19c7461a-snapcraft-primary-icon--dark.svg" alt="">
     <div class="p-matrix__content">
       <h3 class="p-matrix__title"><a class="p-matrix__link" href="#">Snaps</a></h3>
       <div class="p-matrix__desc">
@@ -63,7 +63,7 @@
     </div>
   </li>
   <li class="p-matrix__item">
-    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/a7916513-picto-openstack.svg" alt="icon">
+    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/a7916513-picto-openstack.svg" alt="">
     <div class="p-matrix__content">
       <h3 class="p-matrix__title"><a class="p-matrix__link" href="#">OpenStack</a></h3>
       <div class="p-matrix__desc">
@@ -72,7 +72,7 @@
     </div>
   </li>
   <li class="p-matrix__item">
-    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/b81a45e4-kubernetes.svg" alt="icon">
+    <img class="p-matrix__img" src="https://assets.ubuntu.com/v1/b81a45e4-kubernetes.svg" alt="">
     <div class="p-matrix__content">
       <h3 class="p-matrix__title"><a class="p-matrix__link" href="#">Kubernetes</a></h3>
       <div class="p-matrix__desc">
