--- a/templates/docs/examples/utilities/image-position/bottom-left.html
+++ b/templates/docs/examples/utilities/image-position/bottom-left.html
@@ -5,7 +5,7 @@
 <section class="p-strip u-image-position" style="border: 1px solid #cdcdcd;">
   <div class="row">
     <div class="col-6">
-      <img src="https://assets.ubuntu.com/v1/c6504e94-Dell_XPS_Laptop_Front-Desktop.png?h=200" alt="Placeholder image" class="u-image-position--bottom u-image-position--left" />
+      <img src="https://assets.ubuntu.com/v1/c6504e94-Dell_XPS_Laptop_Front-Desktop.png?h=200" alt="" class="u-image-position--bottom u-image-position--left" />
     </div>
     <div class="col-6">
       <h2>Fast, secure and simple, Ubuntu powers millions of PCs worldwide</h2>
