Add % to the lightness argument of scale-color
This fixes the builds with dart-sass

--- a/scss/_patterns_pagination.scss
+++ b/scss/_patterns_pagination.scss
@@ -6,7 +6,7 @@
     @include vf-button-pattern;
 
     &.is-active {
-      background-color: scale-color($color-x-light, $lightness: -$active-background-opacity-amount * 100);
+      background-color: scale-color($color-x-light, $lightness: -$active-background-opacity-amount * 100%);
       color: $color-dark;
       text-decoration: none;
     }
