--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -82,9 +82,9 @@
   $button-disabled-background-color: $color-transparent,
   $button-disabled-border-color: $colors--light-theme--border-high-contrast,
   $button-border-color: $colors--light-theme--border-high-contrast,
-  $button-hover-background-color: scale-color($color-x-light, $lightness: -$hover-background-opacity-amount * 100),
+  $button-hover-background-color: scale-color($color-x-light, $lightness: -$hover-background-opacity-amount * 100%),
   $button-hover-border-color: $colors--light-theme--border-high-contrast,
-  $button-active-background-color: scale-color($color-x-light, $lightness: -$active-background-opacity-amount * 100),
+  $button-active-background-color: scale-color($color-x-light, $lightness: -$active-background-opacity-amount * 100%),
   $button-active-border-color: $colors--light-theme--border-high-contrast
 ) {
   background-color: $button-background-color;
