--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -1,6 +1,6 @@
 @import 'settings';
-$active-background-opacity-percentage: $active-background-opacity-amount * 100;
-$hover-background-opacity-percentage: $hover-background-opacity-amount * 100;
+$active-background-opacity-percentage: $active-background-opacity-amount * 100%;
+$hover-background-opacity-percentage: $hover-background-opacity-amount * 100%;
 
 // Default button styling
 @mixin vf-p-buttons {
