remove var wrongly added during conflict resolution

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -286,9 +286,7 @@ $lightness-threshold: 70;
   // color for navigation background
   $color-navigation-background,
   // color for navigation text
-  $color-navigation-text,
-  // transparent color of selected and hovered menu item
-  $color-background-hover
+  $color-navigation-text
 ) {
   background-color: $color-navigation-background;
 
