add main and aside landmarks

--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <div class="l-main">
+  <main class="l-main">
     <div class="p-panel">
       <div class="p-panel__header">
         <div class="u-fixed-width u-sv-2">
@@ -284,9 +284,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 
-  <div class="l-aside is-pinned">
+  <aside class="l-aside is-pinned">
     <div class="p-panel--aside">
       <div class="p-panel__header">
         <div class="u-fixed-width u-sv-2">
@@ -302,16 +302,16 @@
         {% include "docs/examples/patterns/forms/_form-stacked.html" %}
       </div>
     </div>
-  </div>
+  </aside>
 
-  <div class="l-status">
+  <aside class="l-status">
     <div class="p-panel demo-status">
       <div class="u-fixed-width">
         Status bar
       </div>
     </div>
   </div>
-</div>
+</aside>
 
 <style>
   body { margin: 0; }
