--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -348,8 +348,7 @@ $lightness-threshold: 70;
     @include vf-navigation-theme(
       $color-navigation-background: $colors--light-theme--background-default,
       $color-navigation-text: $colors--light-theme--text-default,
-      $color-navigation-separator: $colors--light-theme--border-default,
-      $color-background-hover: $colors--dark-theme--text-default
+      $color-navigation-separator: $colors--light-theme--border-default
     );
   } @else {
     // take $color-navigation-background (that can be overridden) into account
@@ -359,8 +358,7 @@ $lightness-threshold: 70;
     @include vf-navigation-theme(
       $color-navigation-background: $color-navigation-background,
       $color-navigation-text: $color-navigation-text,
-      $color-navigation-separator: $colors--light-theme--border-default,
-      $color-background-hover: $colors--dark-theme--text-default
+      $color-navigation-separator: $colors--light-theme--border-default
     );
   }
 }
@@ -370,8 +368,7 @@ $lightness-threshold: 70;
     @include vf-navigation-theme(
       $color-navigation-background: $colors--dark-theme--background-alt,
       $color-navigation-text: $colors--dark-theme--text-default,
-      $color-navigation-separator: $colors--dark-theme--border-default,
-      $color-background-hover: $colors--dark-theme--text-default
+      $color-navigation-separator: $colors--dark-theme--border-default
     );
   } @else {
     // take $color-navigation-background (that can be overridden) into account
@@ -381,8 +378,7 @@ $lightness-threshold: 70;
     @include vf-navigation-theme(
       $color-navigation-background: $color-navigation-background,
       $color-navigation-text: $color-navigation-text,
-      $color-navigation-separator: $colors--dark-theme--border-default,
-      $color-background-hover: $colors--dark-theme--text-default
+      $color-navigation-separator: $colors--dark-theme--border-default
     );
   }
 }
