add landmarks to application examples

--- a/templates/docs/examples/layouts/application-structure.html
+++ b/templates/docs/examples/layouts/application-structure.html
@@ -2,12 +2,12 @@
 {% block title %}Application / Structure{% endblock %}
 
 {% block content %}
-<div class="l-application  app-demo">
+<div class="l-application app-demo" role="presentation">
   <div class="l-navigation-bar">
     <div class="u-clearfix"><code>l-navigation-bar</code> <button class="u-float-right js-menu-toggle is-dense u-no-margin">Menu</button></div>
   </div>
 
-  <div class="l-navigation">
+  <div class="l-navigation" role="banner">
     <div class="l-navigation__drawer">
       <p class="demo-controls u-hide--large u-align--right">
         <button class="js-menu-pin is-dense u-no-margin u-hide--small">Pin</button>
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="l-main">
+  <main class="l-main">
     <p><code>l-main</code></p>
     <p class="u-clearfix">
       <button class="js-aside-toggle">Toggle aside panel</button>
@@ -51,20 +51,20 @@
         </tr>
       </tfoot>
     </table>
-  </div>
+  </main>
 
-  <div class="l-aside">
+  <aside class="l-aside">
     <p class="u-align--right">
       <button class="js-aside-pin is-dense">Pin</button>
       <button class="js-aside-close is-dense">Close</button>
     </p>
     <p><code>l-aside</code></p>
     <p></p>
-  </div>
+  </aside>
 
-  <div class="l-status">
+  <aside class="l-status">
     <code>l-status</code>
-  </div>
+  </aside>
 </div>
 
 
