--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -2,7 +2,7 @@
 {% block title %}Application / Panels{% endblock %}
 
 {% block content %}
-<div class="l-application">
+<div class="l-application" role="presentation">
   <div class="l-navigation-bar">
     <div class="p-panel is-dark">
       <div class="u-fixed-width u-align--right">
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div class="l-navigation is-collapsed">
+  <div class="l-navigation is-collapsed" role="banner">
     <div class="l-navigation__drawer">
       <div class="p-panel is-dark">
         <div class="p-panel__header--sticky">
